# amdcalc

./: .gitignore  README.md  meson.build  meson.options
gui/: bun.lockb  package.json
gui/src/: App.vue
gui/src-tauri/: tauri.conf.json
src/: amdcalc.cpp  amdcalc.h  cli.cpp  parser.cpp  parser.h  prompt.cpp  prompt.h  scanner.cpp  scanner.h  solvetree.cpp  solvetree.h  tests.cpp
src/amdcalc/: amdcalc.cpp  amdcalc.h  amdcalc.hpp
subprojects/: CppDecimal.wrap  cpp-terminal.wrap  muparser.wrap
